<resources>
    <string name="app_name">FoodApp</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="preference_file_key">com.example.foodapp.PREFERENCE_FILE_KEY</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_discover">Discover</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_capture">Capture</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_logout">Logout</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="title_activity_capture">Capture</string>
    <string name="title_activity_create">Create</string>

    <string name="profile_origin_id">profileFrag</string>
    <string name="home_origin_id">homeFrag</string>
    <string name="discover_origin_id">discoverFrag</string>
    <string name="post_detail_origin_id">postDetail</string>
    <string name="recipe_detail_origin_id">recipeDetail</string>
    <string name="create_comment_origin_id">createComment</string>
</resources>
