<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:checkable="true"
            android:icon="@drawable/ic_local_dining_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_discover"
            android:icon="@drawable/ic_whatshot_black_24dp"
            android:title="@string/menu_discover" />
        <item
            android:id="@+id/nav_profile"
            android:enabled="true"
            android:icon="@drawable/ic_person_outline_black_24dp"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_capture"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_capture" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/ic_phonelink_erase_black_24dp"
        android:title="@string/menu_logout" />

</menu>
